--- a/index.html
+++ b/index.html
@@ -4,9 +4,414 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<title>Template</title>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=DM+Serif+Display:ital@0;1&family=Lobster&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<style>
+		body {
+			background-color: grey;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+			background-position: center;
+			color: white;
+		}
+		.heading {
+			color: black;
+			text-align: center;
+			font-family: "DM Serif Display", sans-serif;
+			font-size: 60px;
+
+			margin: 5px;
+			padding: 5px;
+		}
+		.subheading {
+			color: black;
+			text-align: center;
+			font-family: "DM Serif Display", sans-serif;
+			font-size: 40px;
+
+			margin: 3px;
+			padding: 3px;
+		}
+		.navbar {
+			padding: 20px;
+			background-color: white;
+			color: whitesmoke;
+			font-family: "Raleway", sans-serif;
+			font-size: 20px;
+		}
+		.container {
+			padding: 15px;
+		}
+		.titleimage {
+			text-align: center;
+		}
+		.images {
+			text-align: center;
+
+		}
+		.description {
+			font-family: "Raleway", sans-serif;
+			font-size: 18px;
+		}
+		.album {
+			border-color: darkred;
+		}
+		.minor {
+			background-color: whitesmoke;
+			color: darkred;
+			font-family: "Cedarville Cursive", cursive;
+			padding: 10px;
+			text-align: center;
+			border-color: darkred;
+		}
+		.tiwifl {
+			background-color: darkolivegreen;
+			color: ivory;
+			font-family: Lobster, serif;
+			padding: 10px;
+			text-align: center;
+		}
+		.goodriddance {
+			background-color: darkgrey;
+			color: black;
+			font-family: "Raleway", sans-serif;
+			padding: 10px;
+			text-align: center;
+		}
+		.singles {
+			background-color: darkslateblue;
+			color: black;
+			font-family: "DM Serif Display", sans-serif;
+			padding: 10px;
+			text-align: center;
+		}
+	</style>
+	<title>Gracie Abrams</title>
+	<link rel="icon" type="image/x-icon" href="https://i.pinimg.com/736x/9b/12/77/9b1277c6ed879bf4c46fe7a3e713e472.jpg">
 </head>
 <body>
+	<nav class="navbar navbar-expand-xl">
+		<a class="nav nav-brand">
+			<img src="https://i.pinimg.com/736x/9b/12/77/9b1277c6ed879bf4c46fe7a3e713e472.jpg" width="50">
+		</a>
+		<div class="container-fluid">
+			<ul class="nav nav-tabs">
+				<li class="nav-item">
+					<a class="nav-link active" href="https://pascual-ll.github.io/3Q-Project/">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="https://pascual-ll.github.io/3Q-Project-Registration/">Fan Club</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="https://pascual-ll.github.io/3Q-Project-References/">References</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<br />
+	<hr />
+	<div class="heading">
+		<p>⋆ Gracie Abrams ⋆</p>
+	</div>
+	<hr />
+	<div class="container">
+		<div class="row">
+			<div class="col-xl-12 bg-light">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xl-7 description">
+				<p>
+					Gracie Abrams is a singer-songwriter, who usually creates calm, indie-pop songs. Born on September 7, 1999, she grew up in Los Angeles County, California. At a young age, she played different musical instruments such as the drums, piano, guitar and ukulele. Eventually, she gained a following on social media for her earlier songs. She expanded her music career, releasing her first single "Mean It" in 2019. Her music gives us a cozy, calm mood, with her soft vocals and unique sounds incorporated into the songs.
 
+					She's grown not just as a singer, but as an artist, with 2 EPs, and 1 album, all successful. She was as an opening act for Olivia Rodrigo in 2022, and an opening act for Taylor Swift in 2023, even singing a duet with her. She was also nominated for "best new artist" at the 2024 Grammy Awards. She continues to grow in her career, putting much work and skill in her music.
+				</p>
+			</div>
+			<div class="col-xl-5 titleimage">
+				<img src="https://images.wsj.net/im-531148/portrait?pixel_ratio=2" width="200" class="rounded">
+			</div>
+		</div>
+	</div>
+	<br />
+	<hr />
+	<div class="subheading">
+		<p>⋆ Discography ⋆</p>
+	</div>
+	<hr />
+	<br />
+	<div class="container minor">
+		<div class="row">
+			<div class="col-xl-12">
+				<h2>Minor - EP</h2>
+			</div>
+		</div>
+		<div class="row description">
+			<div class="col-xl-6">
+				<p>Minor, Gracie's first EP released in 2020, contains soft vocals and lyrics about tough relationships and friendships from the past. Its songs contain unique, brain-scratching sounds, with gentle harmonies.</p>
+				<p>Click on the picture to listen on Spotify ></p>
+			</div>
+			<div class="col-xl-6">
+				<a href="https://open.spotify.com/album/2UZw04wDxLVceADw2Gi1Qy?si=N2JLAmQ9Tqu0K9xHJMb6pw"><img src="https://images.genius.com/a094a04de52f3c9465a5819ee5e6d1e6.1000x1000x1.jpg" width="200" class="rounded"></a>
+			</div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-xl-12">
+				<table class="table table-danger table-striped">
+					<tr>
+						<td><h3>Songs</h3></td>
+						<td><h3>Music Videos</h3></td>
+					</tr>
+					<tr>
+						<td>Friend</td>
+						<td><a href="https://www.youtube.com/watch?v=lPZQLQavG4A">Friend - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>21</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Under / Over</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>tehe</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>I miss you, I'm sorry</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Long Sleeves</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>minor</td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+	<br />
+	<div class="container tiwifl">
+		<div class="row">
+			<div class="col-xl-12">
+				<h2>This is What it Feels Like - EP</h2>
+			</div>
+		</div>
+		<div class="row description">
+			<div class="col-xl-6">
+				<p>Released in 2021, this EP has more upbeat songs, while maintaining her calm, relaxing energy. Gracie's lyrical portrayal of love and friendship mixes well with the album's upbeat mood.</p>
+				<p>Click on the picture to listen on Spotify ></p>
+			</div>
+			<div class="col-xl-6">
+				<a href="https://open.spotify.com/album/7l2g05NyprwonSFIs2y8at?si=3d58e6a8c1da4321"><img src="https://i.scdn.co/image/ab67616d0000b2736d63fd3e1afa17b0d5563131" width="200" class="rounded"></a>
+			</div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-xl-12">
+				<table class="table table-success table-striped">
+					<tr>
+						<td><h3>Songs</h3></td>
+						<td><h3>Music Videos</h3></td>
+					</tr>
+					<tr>
+						<td>Feels Like</td>
+						<td><a href="https://www.youtube.com/watch?v=ptznWGs4GKg">Feels Like - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>Rockland</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>For Real This Time</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Camden</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>The Bottom</td>
+						<td><a href="https://www.youtube.com/watch?v=FgBDOAjj3Qs">The Bottom - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>Wishful Thinking</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Older</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Better</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Hard to Sleep</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Augusta</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Painkillers</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Alright</td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+	<br />
+	<div class="container goodriddance">
+		<div class="row">
+			<div class="col-xl-12">
+				<h2>Good Riddance</h2>
+			</div>
+		</div>
+		<div class="row description">
+			<div class="col-xl-6">
+				<p>Gracie's first album, released in 2023, contains a mix of calm songs and others with more somber moods. Lyrically, she experiments with sharp changes in her bridges, which still complement the mood of her songs. Love, friendship and loss is tackled.</p>
+				<p>Click on the picture to listen on Spotify ></p>
+			</div>
+			<div class="col-xl-6">
+				<a href="https://open.spotify.com/album/78YYcghEDz2dHRx0EcDGXZ?si=a72f8835980d4e89"><img src="https://i.scdn.co/image/ab67616d0000b273cc8fc5bf7ea73853fec45925" width="200" class="rounded"></a>
+			</div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-xl-12">
+				<table class="table table-muted table-striped">
+					<tr>
+						<td><h3>Songs</h3></td>
+						<td><h3>Music Videos</h3></td>
+					</tr>
+					<tr>
+						<td>Best</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>I know it won't work</td>
+						<td><a href="https://www.youtube.com/watch?v=vIalke0YE_Y">I know it won't work - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>Full machine</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Where do we go now?</td>
+						<td><a href="https://www.youtube.com/watch?v=TydmNr585qY">Where do we go now? - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>I should hate you</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Will you cry?</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Amelie</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Difficult</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>TIWTDAF</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Fault line</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>The blue</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Right now</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Block me out</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Unsteady</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>405</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Two people</td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+	<br />
+	<div class="container singles">
+		<div class="row">
+			<div class="col-xl-12">
+				<h2>Singles</h2>
+			</div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-xl-12">
+				<table class="table table-primary table-striped">
+					<tr>
+						<td><h3>Songs</h3></td>
+						<td><h3>Music Videos</h3></td>
+					</tr>
+					<tr>
+						<td>Mean It (2019)</td>
+						<td><a href="https://www.youtube.com/watch?v=eWTt0NQAkn0">Mean It - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>Stay (2019)</td>
+						<td><a href="https://www.youtube.com/watch?v=LChF16vd4RM">Stay - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>Brush Fire (2020)</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Unlearn (with Benny Blanco) (2021)</td>
+						<td><a href="https://www.youtube.com/watch?v=aVXjbwjngEo">Unlearn - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>Mess It Up (2021)</td>
+						<td><a href="https://www.youtube.com/watch?v=KMjSuj_LRh0">Mess It Up - Music Video</a></td>
+					</tr>
+					<tr>
+						<td>Cedar (2023)</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Everywhere, Everything (with Noah Kahan) (2023)</td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+	<br />
 </body>
 </html>
